@@ -31,9 +31,33 @@
 # /dev/sda1     reiserfs  256666     16052    227362       7% /boot
 # /dev/mapper/mirrored-database ext3  20642428   1027112  19405604       6% /mirrored/database
 
+def df_parse_info(info):
+    df_blocks = []
+    df_inodes = []
+    lines = iter(info)
+    try:
+        is_inode = False
+        while True:
+            line = lines.next()
+            if line[-1] == '[df_inodes_start]':
+                is_inode = True
+                continue
+            elif line[-1] == '[df_inodes_end]':
+                is_inode = False
+                continue
+            if not is_inode:
+                df_blocks.append(line)
+            else:
+                df_inodes.append(line)
+    except StopIteration:
+        pass
+
+    return df_blocks, df_inodes
+
 def inventory_df(info):
+    df_blocks, df_inodes = df_parse_info(info)
     mplist = []
-    for line in info:
+    for line in df_blocks:
         if line[1] in inventory_df_exclude_fs:
             continue # ignore this filesystem type
 
@@ -50,8 +74,10 @@ def inventory_df(info):
 
 
 def check_df(item, params, info):
-    fslist = []
-    for line in info:
+    fslist_blocks = []
+    fslist_inodes = []
+    df_blocks, df_inodes = df_parse_info(info)
+    for idx, line in enumerate(df_blocks):
         # df outputs seven columns:
         # DEVICE FS-TYPE SIZE(KB) USED(KB) AVAIL(KB) USED(%) MOUNTPOINT
         # The mount point may contain spaces (seen on VMWare volumes and on ESX)
@@ -64,9 +90,10 @@ def check_df(item, params, info):
             # to compute the used space.
             size_mb    = int(line[2]) / 1024.0
             avail_mb   = int(line[4]) / 1024.0
-            fslist.append((mountpoint, size_mb, avail_mb))
-
-    return df_check_filesystem_list(item, params, fslist)
+            fslist_blocks.append((mountpoint, size_mb, avail_mb))
+            if df_inodes:
+                fslist_inodes.append((mountpoint, int(df_inodes[idx][2]), int(df_inodes[idx][4])))
+    return df_check_filesystem_list(item, params, fslist_blocks, fslist_inodes)
 
 check_info['df'] = {
     "check_function"          : check_df,
