@@ -111,6 +111,7 @@
     * 0141 ups_socomec_capacity: Battery Capacity Check for Socomec UPS Devices.
     * 0705 arcserve_backup: improved documentation (check manpage and comments in the agent plugin)
     * 0143 ups_socomec_in_voltage, ups_socomec_out_voltage: Socomec UPS Devices, Input and Output Voltages...
+    * 0732 df: now able to monitor inodes...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
@@ -208,8 +209,8 @@
     * 0587 FIX: if64: problems resolved when running as a clustered service...
     * 0563 FIX: windows agent: now able to process perl scripts...
     * 0729 FIX: esx_vsphere_hostsystem: fixed incorrect status label (not state)...
-    * 0593 FIX: zypper: agent plugin and check now lead to UNKNOWN result in case of repo problems
     * 0142 FIX: winperf_if: treat unknown packets no longer as error packets
+    * 0593 FIX: zypper: agent plugin and check now lead to UNKNOWN result in case of repo problems
 
     Multisite:
     * 0371 Added log class filter to hostsvcevents view
